Fix steps titles not aligned in text to speech page

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -334,10 +334,6 @@ body {
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2)
 }
 
-#text-steps-two {
-  margin-top: 40px;
-}
-
 #app-text-input-form {}
 
 .input-arounder {
